fixed scrollbar placement

--- a/src/_scss/pages/search/_searchFilter.scss
+++ b/src/_scss/pages/search/_searchFilter.scss
@@ -11,7 +11,6 @@
 
     .search-filter__top-row {
       display: flex;
-      margin-top: $global-margin * 2;
 
       .search-filter__top-row-icon-container {
         display: flex;
